developer/new-app/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: nodejs-ex
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: nodejs-ex
    deploymentconfig: nodejs-ex
