developer/new-app/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: nodejs-ex
  labels:
    app: nodejs-ex
spec:
  to:
    kind: Service
    name: nodejs-ex
    weight: 100
